icone adicionado, eu sou mt bom velho

--- a/paginas/index.htm
+++ b/paginas/index.htm
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
+    <!-- eu sou mt bom em design, esse código ta foda -->
     <div class="login">
-      <h1>Thread <i>of</i> Love</h1>
+      <div class="logo">
+        <div class="imagem">
+          <img src="css/img/icon.svg" width="60px" height="60px">
+        </div>
+        <h1>Thread <i>of</i> Love</h1>
+      </div>
       <form class="formLogin" action="LoginUsuario" method="post">
         <input type="text" name="email" value="" placeholder="Email" id="email"><br>
         <input type="password" name="senha" value="" placeholder="Senha" id="senha"><br>
