--- a/paginas/index.htm
+++ b/paginas/index.htm
@@ -16,8 +16,8 @@
         <h1>Thread <i>of</i> Love</h1>
       </div>
       <form class="formLogin" action="LoginUsuario" method="post">
-        <input type="text" name="email" value="" placeholder="Email" id="email"><br>
-        <input type="password" name="senha" value="" placeholder="Senha" id="senha"><br>
+        <input type="text" name="email" value="" placeholder="Email" id="campo"><br>
+        <input type="password" name="senha" value="" placeholder="Senha" id="campo"><br>
         <input type="submit" name="" value="Entrar" id="submit">
       </form>
       <p><a href="cadastro.htm">Ou cadastre-se agora</a></p>
