--- a/paginas/cadastro.htm
+++ b/paginas/cadastro.htm
@@ -16,7 +16,7 @@
           <h1>Thread <i>of</i> Love</h1>
         </div>
         <h3 id="centralizarTexto">Cadastro de Usuário</h3>
-        <form class="formLogin" action="cadastro.jsp" method="post">
+        <form class="formLogin" action="" method="post">
           <h3>Dados para login</h3>
           <input type="text" name="login" value="" placeholder="Login" id="campo" required="required"><br>
           <input type="password" name="senha" value="" placeholder="Senha" id="campo" required="required"><br>
