usuario esta recebendo todos os atributos, falta agora gerar e manipular o arquivo

--- a/paginas/index.htm
+++ b/paginas/index.htm
@@ -15,10 +15,10 @@
         </div>
         <h1>Thread <i>of</i> Love</h1>
       </div>
-      <form class="formLogin" action="LoginUsuario" method="post">
-        <input type="text" name="email" value="" placeholder="Email" id="campo"><br>
-        <input type="password" name="senha" value="" placeholder="Senha" id="campo"><br>
-        <input type="submit" name="" value="Entrar" id="submit">
+      <form class="formLogin" action="login" method="post">
+        <input type="text" name="email" value="" placeholder="Email" class="campo"><br>
+        <input type="password" name="senha" value="" placeholder="Senha" class="campo"><br>
+        <input type="submit" name="" value="Entrar" class="submit">
       </form>
       <p><a href="cadastro.htm">Ou cadastre-se agora</a></p>
     </div>
