--- a/paginas/cadastro.htm
+++ b/paginas/cadastro.htm
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Cadastro</title>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/cadastro.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-
       <div class="loginCadastro">
         <div class="logo">
           <div class="imagem">
@@ -17,17 +17,20 @@
         </div>
         <h3 id="centralizarTexto">Cadastro de Usuário</h3>
         <form class="formLogin" action="cadastro" method="post" enctype="multipart/form-data">
-          <h3>Dados para login</h3>
-          <input type="text" name="login" value="" placeholder="Login" class="campo" required="required"><br>
-          <input type="password" name="senha" value="" placeholder="Senha" class="campo" required="required"><br>
-          <h3>Dados pessoais</h3>
-          <input type="text" name="nome" value="" placeholder="Seu nome" class="campo"><br> 
-          <input type="text" name="email" value="" placeholder="Seu Email" class="campo"><br>
-          <input type="text" name="cidade" value="" placeholder="Cidade" class="campo"><br>
-          <input type="date" name="dataDeNascimento" value="" placeholder="Data de Nascimento" class="campo"><br>
-          <input type="text" name="apelido" value="" placeholder="Apelido" class="campo"><br>
-          <input type="text" name="profissao" value="" placeholder="Profissão" class="campo"><br>
-          <input type="text" name="descricao" value="" placeholder="Breve Descrição" class="campo"><br>
+          <div class="col-md-4">
+            <h3 id="centralizarTexto">Dados para login</h3>
+            <input type="text" name="login" value="" placeholder="Login" class="campo" required="required">
+            <input type="password" name="senha" value="" placeholder="Senha" class="campo" required="required">
+          </div>
+          <div class="col-md-4">
+          <h3 id="centralizarTexto">Dados pessoais</h3>
+          <input type="text" name="nome" value="" placeholder="Seu nome" class="campo">
+          <input type="text" name="email" value="" placeholder="Seu Email" class="campo">
+          <input type="text" name="cidade" value="" placeholder="Cidade" class="campo">
+          <input type="date" name="dataDeNascimento" value="" placeholder="Data de Nascimento" class="campo">
+          <input type="text" name="apelido" value="" placeholder="Apelido" class="campo">
+          <input type="text" name="profissao" value="" placeholder="Profissão" class="campo">
+          <input type="text" name="descricao" value="" placeholder="Breve Descrição" class="campo">
           <select name="status" id="selecionarStatus">
             <option>Solteiro (a)</option>
             <option>Namorando</option>
@@ -35,16 +38,21 @@
             <option>Viúvo (a)</option>
             <option>Divorciado (a)</option>
           </select><br><br>
-          <input type="number" min="0" max="3" step="0.01" name="altura" value="" placeholder="Sua Altura" class="campo"><br>
-          <input type="number" min="0" max="200" step="0.1" name="peso" value="" placeholder="Seu Peso" class="campo"><br>
-          <input type="text" name="corDoCabelo" value="" placeholder="Cor do Cabelo" class="campo"><br>
+          <input type="number" min="0" max="3" step="0.01" name="altura" value="" placeholder="Sua Altura" class="campo">
+          <input type="number" min="0" max="200" step="0.1" name="peso" value="" placeholder="Seu Peso" class="campo">
+          <input type="text" name="corDoCabelo" value="" placeholder="Cor do Cabelo" class="campo">
           <input type="text" name="passatempos" value="" placeholder="Passatempos" class="campo">
-          <p><strong>FOTO DO PERFIL</strong></p><br>
-          <input type="file" name="fotoPerfil" id="uploadImagem" accept="image/*"><br>
-          <input type="reset" value="Limpar Campos" class="submit"><hr>
+          </div>
+          <div class="col-md-4">
+            <h3 id="centralizarTexto">Foto do Perfil</h3>
+            <input type="file" name="fotoPerfil" id="uploadImagem" accept="image/*">
+          </div>
+          <input type="reset" value="Limpar Campos" class="submit">
           <input type="submit" name="" value="Cadastrar" class="submit">
         </form>
+        <br><br>
       </div>
-   
+      <script src="js/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
