cadastro de usuario salva a imagem ja, dao de usuario corrigido,tipo, corrigi tbm uns getParameter que tavam com os nomes errados, mudei o tipo da data de nascimento do banco pra string, tava date

--- a/paginas/index.htm
+++ b/paginas/index.htm
@@ -16,7 +16,7 @@
         <h1>Thread <i>of</i> Love</h1>
       </div>
       <form class="formLogin" action="login" method="post">
-        <input type="text" name="email" value="" placeholder="Email" class="campo"><br>
+        <input type="text" name="login" value="" placeholder="Email" class="campo"><br>
         <input type="password" name="senha" value="" placeholder="Senha" class="campo"><br>
         <input type="submit" name="" value="Entrar" class="submit">
       </form>
