--- a/paginas/cadastro.htm
+++ b/paginas/cadastro.htm
@@ -7,48 +7,44 @@
     <link rel="stylesheet" href="css/cadastro.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="container">
       <div class="loginCadastro">
-        <div class="logo">
-          <div class="imagem">
-            <img src="css/img/icon.svg" width="60px" height="60px">
-          </div>
-          <h1>Thread <i>of</i> Love</h1>
-        </div>
-        <h3 id="centralizarTexto">Cadastro de Usuário</h3>
+        <h1 id="centralizarTexto">Cadastro de Usuário</h1>
         <form class="formLogin" action="cadastro" method="post" enctype="multipart/form-data">
           <div class="col-md-4">
             <h3 id="centralizarTexto">Dados para login</h3>
             <input type="text" name="login" value="" placeholder="Login" class="campo" required="required">
             <input type="password" name="senha" value="" placeholder="Senha" class="campo" required="required">
-          </div>
-          <div class="col-md-4">
-          <h3 id="centralizarTexto">Dados pessoais</h3>
-          <input type="text" name="nome" value="" placeholder="Seu nome" class="campo">
-          <input type="text" name="email" value="" placeholder="Seu Email" class="campo">
-          <input type="text" name="cidade" value="" placeholder="Cidade" class="campo">
-          <input type="date" name="dataDeNascimento" value="" placeholder="Data de Nascimento" class="campo">
-          <input type="text" name="apelido" value="" placeholder="Apelido" class="campo">
-          <input type="text" name="profissao" value="" placeholder="Profissão" class="campo">
-          <input type="text" name="descricao" value="" placeholder="Breve Descrição" class="campo">
-          <select name="status" id="selecionarStatus">
-            <option>Solteiro (a)</option>
-            <option>Namorando</option>
-            <option>Casado (a)</option>
-            <option>Viúvo (a)</option>
-            <option>Divorciado (a)</option>
-          </select><br><br>
-          <input type="number" min="0" max="3" step="0.01" name="altura" value="" placeholder="Sua Altura" class="campo">
-          <input type="number" min="0" max="200" step="0.1" name="peso" value="" placeholder="Seu Peso" class="campo">
-          <input type="text" name="corDoCabelo" value="" placeholder="Cor do Cabelo" class="campo">
-          <input type="text" name="passatempos" value="" placeholder="Passatempos" class="campo">
-          </div>
-          <div class="col-md-4">
             <h3 id="centralizarTexto">Foto do Perfil</h3>
-            <input type="file" name="fotoPerfil" id="uploadImagem" accept="image/*">
+            <input type="file" name="fotoPerfil" id="uploadImagem" class="input" accept="image/*">
           </div>
-          <input type="reset" value="Limpar Campos" class="submit">
-          <input type="submit" name="" value="Cadastrar" class="submit">
+          <div class="col-md-8">
+			<h3 id="centralizarTexto">Dados pessoais</h3>
+			<div class="col-md-6">
+		  	  <input type="text" name="nome" value="" placeholder="Seu nome" class="campo">
+			  <input type="text" name="email" value="" placeholder="Seu Email" class="campo">
+			  <input type="text" name="cidade" value="" placeholder="Cidade" class="campo">
+			  <input type="date" name="dataDeNascimento" value="" placeholder="Data de Nascimento" class="campo">
+			  <input type="text" name="apelido" value="" placeholder="Apelido" class="campo">
+			  <input type="text" name="profissao" value="" placeholder="Profissão" class="campo">
+			</div>
+			<div class="col-md-6">
+			  <input type="text" name="descricao" value="" placeholder="Breve Descrição" class="campo">
+			  <select name="status" id="selecionarStatus">
+				<option>Solteiro (a)</option>
+				<option>Namorando</option>
+				<option>Casado (a)</option>
+				<option>Viúvo (a)</option>
+				<option>Divorciado (a)</option>
+			  </select><br><br>
+			  <input type="number" min="0" max="3" step="0.01" name="altura" value="" placeholder="Sua Altura" class="campo">
+			  <input type="number" min="0" max="200" step="0.1" name="peso" value="" placeholder="Seu Peso" class="campo">
+			  <input type="text" name="corDoCabelo" value="" placeholder="Cor do Cabelo" class="campo">
+			  <input type="text" name="passatempos" value="" placeholder="Passatempos" class="campo">
+		    </div>
+          </div>
+          <input type="reset" value="Limpar Campos" class="submit imp" style="margin-left:30%;">
+          <input type="submit" name="" value="Cadastrar" class="submit imp">
         </form>
         <br><br>
       </div>
