--- a/paginas/cadastro.htm
+++ b/paginas/cadastro.htm
@@ -16,13 +16,13 @@
             <input type="text" name="login" value="" placeholder="Login" class="campo" required="required">
             <input type="password" name="senha" value="" placeholder="Senha" class="campo" required="required">
             <h3 id="centralizarTexto">Foto do Perfil</h3>
-            <input type="file" name="fotoPerfil" id="uploadImagem" class="input" accept="image/*">
+            <input type="file" name="fotoPerfil" id="uploadImagem" class="input" accept="image/*" required="required">
           </div>
           <div class="col-md-8">
 			<h3 id="centralizarTexto">Dados pessoais</h3>
 			<div class="col-md-6">
 		  	  <input type="text" name="nome" value="" placeholder="Seu nome" class="campo">
-			  <input type="text" name="email" value="" placeholder="Seu Email" class="campo">
+			  <input type="email" name="email" value="" placeholder="Seu Email" class="campo">
 			  <input type="text" name="cidade" value="" placeholder="Cidade" class="campo">
 			  <input type="date" name="dataDeNascimento" value="" placeholder="Data de Nascimento" class="campo">
 			  <input type="text" name="apelido" value="" placeholder="Apelido" class="campo">
