Menu de navegação criado

--- a/paginas/navBar.htm
+++ b/paginas/navBar.htm
@@ -1,5 +1,27 @@
-<div class="nav">
-  <ul class="list">
-	<li>Profile</li>
-  </ul>
-</div
+
+<meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+<link rel="stylesheet" href="css/navbar.css">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
+<nav class="navbar navbar-inverse" id="menu">
+	<ul class="nav navbar-nav">
+		<li id="active">
+            <a><i>Thread of Love</i></a>
+        </li>
+        <li>
+            <a href="">User Profile</a>
+        </li>
+        <li>
+            <a href="contato.php">Contacts</a>
+        </li>
+        <form>
+	        <input type="text" class="search" placeholder="Busque amigos..." required>
+	        <input type="button" class="button" value="Buscar" >
+		</form>
+    </ul>
+</nav>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+  
