--- a/paginas/navBar.htm
+++ b/paginas/navBar.htm
@@ -10,8 +10,8 @@
             <a href="#">Contacts</a>
         </li>
     </ul>
-	    <form>
-	        <input type="text" class="search" placeholder="Busque amigos..." required>
-	        <input type="button" class="button" value="&#128270;" >
+	    <form method="post" action="buscador">
+	        <input type="text" name="busca" class="search" placeholder="Busque amigos..." required/>
+	        <input type="button" class="button" value="&#128270;"/>
 		</form>
 </nav>
