Pagina de Perfil de Usuario começada, alterações no servlet LoginUsuario

--- a/paginas/navBar.htm
+++ b/paginas/navBar.htm
@@ -4,13 +4,13 @@
 <nav class="navbar navbar-inverse" id="menu">
 	<ul class="nav navbar-nav">
 		<li id="active">
-            <a><i>Thread of Love</i></a>
+            <a><i> <img src="css/img/icon.svg" width="15px" height="15px"> Thread of Love</i></a>
         </li>
         <li>
-            <a href="#">User Profile</a>
+            <a href="inicial.jsp">Perfil do Usuario</a>
         </li>
         <li>
-            <a href="#">Contacts</a>
+            <a href="#">Contatos</a>
         </li>
     </ul>
 	<form method="post" action="buscador">
