--- a/paginas/index.htm
+++ b/paginas/index.htm
@@ -15,9 +15,10 @@
         </div>
         <h1>Thread <i>of</i> Love</h1>
       </div>
-      <form class="formLogin" action="login" method="post">
+      <form class="formLogin" action="front.do" method="post">
         <input type="text" name="login" value="" placeholder="Login" class="campo"><br>
         <input type="password" name="senha" value="" placeholder="Senha" class="campo"><br>
+		<input type="hidden" name="action" value="Login"/>
         <input type="submit" name="" value="Entrar" class="submit">
       </form>
       <p><a href="cadastro.htm">Ou cadastre-se agora</a></p>
