--- a/paginas/index.htm
+++ b/paginas/index.htm
@@ -21,7 +21,7 @@
 		    <input type="hidden" name="action" value="Login"/>
         <input type="submit" name="" value="Entrar" class="submit">
       </form>
-      <p><a href="cadastro.htm">Ou cadastre-se agora</a></p>
+      <p><a href="Cadastro.htm">Ou cadastre-se agora</a></p>
     </div>
   </body>
 </html>
