Toda a parte de convite feita

--- a/paginas/navBar.htm
+++ b/paginas/navBar.htm
@@ -68,7 +68,7 @@
             <a href="Inicial.jsp">Perfil do Usuario</a>
         </li>
         <li class="menuitem">
-            <a href="#">Contatos</a>
+            <a href="Convites.jsp">Convites</a>
         </li>
         <form method="post" action="front.do" id="formBusca">
             <input type="text" name="busca" class="search" placeholder="Busque amigos..." required/>
