--- a/paginas/navBar.htm
+++ b/paginas/navBar.htm
@@ -68,10 +68,8 @@
             <a href="Inicial.jsp">Perfil do Usuario</a>
         </li>
         <li class="menuitem">
-            <a href="#">Convites <span class="badge">0</span></a>
+            <a href="Convites.jsp">Convites <span class="badge">0</span></a>
         </li>
-        <li class="menuitem"><a href="#">Amigos <span class="badge">0</span></a></li>
-        <li class="menuitem"><a href="#">Mensagens <span class="badge">0</span></a></li>
         <li class="menuitem"><a href="Galeria.jsp">Galeria</a></li>
         <form method="post" action="front.do" id="formBusca" class="formpadrao">
             <input type="text" name="busca" class="search" placeholder="Busque amigos..." required/>
