funcionalidade das mensagens feita

--- a/paginas/Cadastro.htm
+++ b/paginas/Cadastro.htm
@@ -30,13 +30,7 @@
 			</div>
 			<div class="col-md-6">
 			  <input type="text" name="descricao" value="" placeholder="Breve Descrição" class="campo">
-			  <select name="status" id="selecionarStatus">
-				<option>Solteiro (a)</option>
-				<option>Namorando</option>
-				<option>Casado (a)</option>
-				<option>Viúvo (a)</option>
-				<option>Divorciado (a)</option>
-			  </select><br><br>
+			  <input name="status" type="hidden" value="Solteiro">
 			  <input type="number" min="0" max="3" step="0.01" name="altura" value="" placeholder="Sua Altura" class="campo">
 			  <input type="number" min="0" max="200" step="0.1" name="peso" value="" placeholder="Seu Peso" class="campo">
 			  <input type="text" name="corDoCabelo" value="" placeholder="Cor do Cabelo" class="campo">
