Pagina de erro adicionada a todas as classes command

--- a/paginas/Erro.html
+++ b/paginas/Erro.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="page">
 		<h2><b>Ocorreu um problema !</b></h2>
-		<h3>Volte para a página onde voc estava</h3>
+		<h3>Volte para a página onde voce estava</h3>
 	</div>
 </div>
 </body>
