--- a/paginas/Index.htm
+++ b/paginas/Index.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>login - prototype</title>
+    <title>Login</title>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
   </head>
